--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,9 @@ bta_version=1.7.7.0_02
 loader_version=0.14.19-babric.1-bta
 
 # HalpLibe
-halplibe_version=2.5.0
+halplibe_version=2.6.0
 
 # Mod
-mod_version=0.2.0
+mod_version=0.2.1
 mod_group=turniplabs
-mod_name=simple-tech
+mod_name=simple-tech-useless
