--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,8 @@ loader_version=0.14.19-babric.3-bta
 
 # HalpLibe
 halplibe_version=3.1.1
+
 # Mod
-mod_version=0.2.1-7.1
+mod_version=0.3.0
 mod_group=turniplabs
-mod_name=simple-tech-useless
+mod_name=simple-tech
