--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,14 @@ repositories {
 		}
 		metadataSources { artifact() }
 	}
+	ivy {
+		url = "https://github.com/ToufouMaster"
+		patternLayout {
+			artifact "[organisation]/releases/download/[revision]/[module]-[revision].jar"
+			m2compatible = true
+		}
+		metadataSources { artifact() }
+	}
 }
 
 dependencies {
@@ -84,7 +92,7 @@ dependencies {
 	// Helper library
 	// If you do not need Halplibe you can comment this line out or delete this line
 	modImplementation "com.github.Turnip-Labs:bta-halplibe:${project.halplibe_version}"
-
+	modImplementation "BTWaila:btwaila:${project.btwalia_version}"
 	modImplementation "ModMenu:ModMenu:2.0.3"
 
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
