--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,9 @@ loader_version=0.15.6-babric.6-bta
 # HalpLibe
 halplibe_version=4.1.3
 
+# BTWalia
+btwalia_version=1.1.2-7.2-pre2
+
 # Mod
 mod_version=0.3.0
 mod_group=ambos
